add code of conduct

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,3 +26,6 @@ The goal of prener is to document functions that I use frequently in my own rese
 # install.packages("devtools")
 devtools::install_github("chris-prener/prener")
 ```
+
+## Contributor Code of Conduct
+Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
