--- a/README.Rmd
+++ b/README.Rmd
@@ -14,9 +14,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# prener
+# prener <img src="man/figures/logo.png" align="right" />
 
-The goal of prener is to document functions that I use frequently in my own research and teaching.
+The goal of `prener` is to document functions that I use frequently in my own research and teaching.
 
 ## Installation
 
