add description of cp_plotSave() to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,5 +37,15 @@ prener::cp_points(200, units = "cm")
 prener::cp_points(200, units = "mm")
 ```
 
+The [Keynote templates](https://github.com/chris-prener/sequoia_templates) that I use for teaching and presentations have three standard sizes that I create plots for - small (960 x 540 points), medium (960 x 630 points), and large (1024 by 768 points). The `cp_plotSave()` function will export `ggplot2` plots at these dimensions. By default, these are done at 300 dots per inch but that can also be adjusted:
+
+```{r, eval=FALSE}
+p <- ggplot(mpg, aes(hwy)) + geom_histogram()
+
+prener::cp_plotSave("hwy.png", p, preset = "sm")
+prener::cp_plotSave("hwy.png", p, preset = "med")
+prener::cp_plotSave("hwy.png", p, preset = "lg", dpi = 500)
+```
+
 ## Contributor Code of Conduct
 Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
