--- a/README.Rmd
+++ b/README.Rmd
@@ -47,5 +47,43 @@ prener::cp_plotSave("hwy.png", p, preset = "med")
 prener::cp_plotSave("hwy.png", p, preset = "lg", dpi = 500)
 ```
 
+### Tables
+`prener` has a function, modeled on the [`frequencies` package](https://github.com/DataInsightPartners/frequencies), for creating tidy frequency tables, primarily for discrete variables. The main differences between the original function `freq_vect()` and my implementation is that I (1) make the inclusion of missing data optional and (2) make the number of significant digits displayed explicit and customizeable.
+
+```{r}
+tableData <- data.frame(
+    id = c(1, 2, 3, 4, 5, 6),
+    nhoodStr = c("Patch", "Bevo Mill", "Bevo Mill", "Lindenwood Park", "Carondelet" , "Shaw"),
+    visit = c(TRUE, FALSE, FALSE, TRUE, TRUE, NA),
+    stringsAsFactors = FALSE
+    )
+
+prener::cp_tidyTable(tableData$nhoodStr)
+
+prener::cp_tidyTable(tableData$visit)
+
+prener::cp_tidyTable(tableData$visit, missRow = FALSE)
+```
+
+The package also provides a function for converting tidy tables into LaTeX-formatted frequency tables. The function can either create a full LaTeX document (`type = "doc"`), only the LaTeX table (`type = "table"`), or only the applicable rows with values (`type = "row"`). The last option can be used for creating a LaTeX table with multiple sections for different discrete variables.
+
+```{r}
+tableData <- data.frame(
+    id = c(1, 2, 3, 4, 5, 6),
+    nhoodStr = c("Patch", "Bevo Mill", "Bevo Mill", "Lindenwood Park", "Carondelet" , "Shaw"),
+    visit = c(TRUE, FALSE, FALSE, TRUE, TRUE, NA),
+    stringsAsFactors = FALSE
+    )
+
+prener::cp_texTable(tableData, "visit", type = "table")
+```
+
+### Statistics
+`prener` includes a helper function for calculating p-values under the t-distribution:
+
+```{r}
+prener::cp_probt(3.6308, df = 72)
+```
+
 ## Contributor Code of Conduct
 Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
