--- a/README.Rmd
+++ b/README.Rmd
@@ -75,8 +75,12 @@ tableData <- data.frame(
     stringsAsFactors = FALSE
     )
 
-prener::cp_texTable(tableData, "visit", type = "table")
+prener::cp_texTable(tableData, "visit", type = "table", title = "Neighborhoods Visited")
 ```
+
+The output is modeled on the [`stargazer` package](https://cran.r-project.org/web/packages/stargazer/):
+
+![texTableExample](man/figures/texTableExample.png)
 
 ### Statistics
 `prener` includes a helper function for calculating p-values under the t-distribution:
