remove plotting details from README

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,23 +32,7 @@ devtools::install_github("chris-prener/prener")
 
 ## Useage
 ### Plotting
-`prener` includes a number of functions that I use in conjunction with `ggplot2`. One issue I address is that `ggsave()` does not accept measurements for `width` and `height` in points, but Keynote lays slides out using points as the unit of measurement. The `cp_points()` function will convert points to inches, centimeters, or millimeters (the units used by `ggsave()`).
-
-```{r}
-prener::cp_points(200, units = "in")
-prener::cp_points(200, units = "cm")
-prener::cp_points(200, units = "mm")
-```
-
-The [Keynote templates](https://github.com/chris-prener/sequoia_templates) that I use for teaching and presentations have three standard sizes that I create plots for - small (960 x 540 points), medium (960 x 630 points), and large (1024 by 768 points). The `cp_plotSave()` function will export `ggplot2` plots at these dimensions. By default, these are done at 300 dots per inch but that can also be adjusted:
-
-```{r, eval=FALSE}
-p <- ggplot(mpg, aes(hwy)) + geom_histogram()
-
-prener::cp_plotSave("hwy.png", p, preset = "sm")
-prener::cp_plotSave("hwy.png", p, preset = "med")
-prener::cp_plotSave("hwy.png", p, preset = "lg", dpi = 500)
-```
+`prener` includes a number of functions that I use in conjunction with `ggplot2`, including a function (`cp_points()`) for converting measurements from points to inches, centimeters, and millimeters and a function (`cp_plotSave()`) for standardized export options.
 
 ### Tables
 `prener` has a function, modeled on the [`frequencies` package](https://github.com/DataInsightPartners/frequencies), for creating tidy frequency tables, primarily for discrete variables. The main differences between the original function `freq_vect()` and my implementation is that I (1) make the inclusion of missing data optional and (2) make the number of significant digits displayed explicit and customizeable.
