--- a/README.Rmd
+++ b/README.Rmd
@@ -35,47 +35,14 @@ devtools::install_github("chris-prener/prener")
 `prener` includes a number of functions that I use in conjunction with `ggplot2`, including a function (`cp_points()`) for converting measurements from points to inches, centimeters, and millimeters and a function (`cp_plotSave()`) for standardized export options.
 
 ### Tables
-`prener` has a function, modeled on the [`frequencies` package](https://github.com/DataInsightPartners/frequencies), for creating tidy frequency tables, primarily for discrete variables. The main differences between the original function `freq_vect()` and my implementation is that I (1) make the inclusion of missing data optional and (2) make the number of significant digits displayed explicit and customizeable.
-
-```{r}
-tableData <- data.frame(
-    id = c(1, 2, 3, 4, 5, 6),
-    nhoodStr = c("Patch", "Bevo Mill", "Bevo Mill", "Lindenwood Park", "Carondelet" , "Shaw"),
-    visit = c(TRUE, FALSE, FALSE, TRUE, TRUE, NA),
-    stringsAsFactors = FALSE
-    )
-
-prener::cp_tidyTable(tableData$nhoodStr)
-
-prener::cp_tidyTable(tableData$visit, round = 3)
-
-prener::cp_tidyTable(tableData$visit, round = 2, missRow = FALSE)
-```
-
-The package also provides a function for converting tidy tables into LaTeX-formatted frequency tables. The function can either create a full LaTeX document (`type = "doc"`), only the LaTeX table (`type = "table"`), or only the applicable rows with values (`type = "row"`). The last option can be used for creating a LaTeX table with multiple sections for different discrete variables.
-
-```{r}
-tableData <- data.frame(
-    id = c(1, 2, 3, 4, 5, 6),
-    nhoodStr = c("Patch", "Bevo Mill", "Bevo Mill", "Lindenwood Park", "Carondelet" , "Shaw"),
-    visit = c(TRUE, FALSE, FALSE, TRUE, TRUE, NA),
-    stringsAsFactors = FALSE
-    )
-
-prener::cp_texTable(tableData, "visit", type = "table", title = "Neighborhoods Visited")
-```
-
-The output is modeled on the [`stargazer` package](https://cran.r-project.org/web/packages/stargazer/):
-
-![](man/figures/texTableExample.png)
-
-Both the [`multirow`](https://ctan.org/pkg/multirow) and [`hhline`](https://ctan.org/pkg/hhline) packages must be loaded in the preamble of your LaTeX document. The `type = "doc"` output will include these, but if you are adding a table to a pre-existing document, be sure to add them!
+The package also includes functionality
 
 ### Statistics
 `prener` includes a helper function for calculating p-values under the t-distribution:
 
-```{r}
-prener::cp_probt(3.6308, df = 72)
+```{r, eval = FALSE}
+> cp_probt(3.6308, df = 72)
+[1] 0.0005254992
 ```
 
 ## Contributor Code of Conduct
