--- a/vignettes/plots.Rmd
+++ b/vignettes/plots.Rmd
@@ -14,10 +14,18 @@ vignette: >
 ## Sizing Plots
 One issue I address is that `ggsave()` does not accept measurements for `width` and `height` in points, but Keynote lays slides out using points as the unit of measurement. The `cp_points()` function will convert points to inches, centimeters, or millimeters (the units used by `ggsave()`).
 
-```{r}
-prener::cp_points(200, units = "in")
-prener::cp_points(200, units = "cm")
-prener::cp_points(200, units = "mm")
+```{r, eval=FALSE}
+> library(prener)
+> library(ggplot2)
+
+> cp_points(200, units = "in")
+[1] 2.77778 
+
+> cp_points(200, units = "cm")
+[1] 7.05556
+
+> cp_points(200, units = "mm")
+[1] 70.5556
 ```
 
 These functions can be embedded directly in `ggsave()` calls:
@@ -26,8 +34,8 @@ These functions can be embedded directly in `ggsave()` calls:
 p <- ggplot(mpg, aes(hwy)) + geom_histogram()
 
 ggsave("hwy", p, device = "png", 
-       width = prener::cp_points(500, units = "mm"), 
-       height = prener::cp_points(375, units = "mm"), 
+       width = cp_points(500, units = "mm"), 
+       height = cp_points(375, units = "mm"), 
        units = "mm", dpi = 300)
 ```
 
@@ -38,13 +46,13 @@ The [Keynote templates](https://github.com/chris-prener/sequoia_templates) that 
 ```{r, eval=FALSE}
 p <- ggplot(mpg, aes(hwy)) + geom_histogram()
 
-prener::cp_plotSave("hwy", p, preset = "sm")
-prener::cp_plotSave("hwy", p, preset = "med")
-prener::cp_plotSave("hwy", p, preset = "lg", dpi = 500)
+cp_plotSave("hwy", p, preset = "sm")
+cp_plotSave("hwy", p, preset = "med")
+cp_plotSave("hwy", p, preset = "lg", dpi = 500)
 ```
 
 If no `device` is specified, plots will be exported as `.png` files. Other output options may be specified using `device`:
 
 ```{r, eval=FALSE}
-prener::cp_plotSave("hwy", p, device = "pdf", preset = "lg", dpi = 500)
+cp_plotSave("hwy", p, device = "pdf", preset = "lg", dpi = 500)
 ```
