--- a/vignettes/plots.Rmd
+++ b/vignettes/plots.Rmd
@@ -9,7 +9,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-`prener` includes a number of functions that I use in conjunction with `ggplot2`. The package includes a tool for implementing points as a unit of measure in `ggplot2` as well as standardized export options.
+`prener` includes a number of functions that I use in conjunction with `ggplot2`. The package includes a tool for implementing points as a unit of measure in `ggplot2` as well as standardized design and export options.
 
 ## Sizing Plots
 One issue I address is that `ggsave()` does not accept measurements for `width` and `height` in points, but Keynote lays slides out using points as the unit of measurement. The `cp_points()` function will convert points to inches, centimeters, or millimeters (the units used by `ggsave()`).
@@ -39,12 +39,24 @@ ggsave("hwy", p, device = "png",
        units = "mm", dpi = 300)
 ```
 
+## Standardized Theme
+I have tweaked the excellent [`theme_fivethiryeight`](https://github.com/jrnold/ggthemes) [`ggplot2`](http://ggplot2.tidyverse.org) theme from the [`ggthemes` package](https://github.com/jrnold/ggthemes) to provide a consistent appearance for plots used with my [Sequoia Keynote template](https://github.com/chris-prener/sequoia_templates). I have changed the background color for the plot, the panel, and the legend to match the background of my slides. I've also re-positioned the legend, since I often teach in classrooms where bottom legends are not visible to the entire class. Finally, I've changed the base font-size to one that stands out easily on slides.
+
+```{r, eval=FALSE}
+p <- ggplot(mpg, aes(hwy)) + 
+         geom_histogram() + 
+         cp_sequoiaTheme()
+```
+
+![](figures/exampleSequoiaTheme.png)
+
 ## Standardized Export Options
 
 The [Keynote templates](https://github.com/chris-prener/sequoia_templates) that I use for teaching and presentations have three standard sizes that I create plots for - small (960 x 540 points), medium (960 x 630 points), and large (1024 by 768 points). The `cp_plotSave()` function will export `ggplot2` plots at these dimensions. By default, these are done at 300 dots per inch but that can also be adjusted:
 
 ```{r, eval=FALSE}
-p <- ggplot(mpg, aes(hwy)) + geom_histogram()
+p <- ggplot(mpg, aes(hwy)) + 
+         geom_histogram()
 
 cp_plotSave("hwy", p, preset = "sm")
 cp_plotSave("hwy", p, preset = "med")
@@ -56,3 +68,4 @@ If no `device` is specified, plots will be exported as `.png` files. Other outpu
 ```{r, eval=FALSE}
 cp_plotSave("hwy", p, device = "pdf", preset = "lg", dpi = 500)
 ```
+
