--- a/vignettes/tables.Rmd
+++ b/vignettes/tables.Rmd
@@ -44,6 +44,6 @@ prener::cp_texTable(tableData, "visit", type = "table", title = "Neighborhoods V
 
 The output is modeled on the [`stargazer` package](https://cran.r-project.org/web/packages/stargazer/):
 
-![](man/figures/texTableExample.png)
+![](figures/texTableExample.png)
 
 Both the [`multirow`](https://ctan.org/pkg/multirow) and [`hhline`](https://ctan.org/pkg/hhline) packages must be loaded in the preamble of your LaTeX document. The `type = "doc"` output will include these, but if you are adding a table to a pre-existing document, be sure to add them!
