--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,6 @@ knitr::opts_chunk$set(
 The goal of `prener` is to document functions that I use frequently in my own research and teaching.
 
 ## Installation
-
 `prener` is not available from CRAN (and likely never will be!). You can install `prener` from [Github](https://github.com/chris-prener/prener) with `devtools`:
 
 ```{r gh-installation, eval = FALSE}
@@ -32,10 +31,9 @@ devtools::install_github("chris-prener/prener")
 
 ## Useage
 ### Plotting
-`prener` includes a number of functions that I use in conjunction with `ggplot2`, including a function (`cp_points()`) for converting measurements from points to inches, centimeters, and millimeters and a function (`cp_plotSave()`) for standardized export options.
+`prener` includes a number of functions that I use in conjunction with `ggplot2`, including a function (`cp_points()`) for converting measurements from points to inches, centimeters, and millimeters and a function (`cp_plotSave()`) for standardized export options. 
 
-### Tables
-The package also includes functionality
+The package also includes a theme specification for `ggplot2` that is designed to produce clean, minimal plots and maps for lectures and presentations. The theme is built on top of [`ggthemes`](https://github.com/jrnold/ggthemes) and can be used with a number of backgrounds. Both plots and maps can be produced with a white and a transparent background, and plots can also be produced using a particular shade of gray (`#EBEBEB`) that I use in the background of my slides.
 
 ### Statistics
 `prener` includes a helper function for calculating p-values under the t-distribution:
@@ -46,4 +44,4 @@ The package also includes functionality
 ```
 
 ## Contributor Code of Conduct
-Please note that this project is released with a [Contributor Code of Conduct](CONDUCT.md). By participating in this project you agree to abide by its terms.
+Please note that this project is released with a [Contributor Code of Conduct](CODE_OFCONDUCT.md). By participating in this project you agree to abide by its terms.
