update README with new function

--- a/README.Rmd
+++ b/README.Rmd
@@ -30,10 +30,12 @@ devtools::install_github("chris-prener/prener")
 ```
 
 ## Useage
-### Plotting
+### Plotting and Mapping
 `prener` includes a number of functions that I use in conjunction with `ggplot2`, including a function (`cp_points()`) for converting measurements from points to inches, centimeters, and millimeters and a function (`cp_plotSave()`) for standardized export options. 
 
 The package also includes a theme specification for `ggplot2` that is designed to produce clean, minimal plots and maps for lectures and presentations. The theme is built on top of [`ggthemes`](https://github.com/jrnold/ggthemes) and can be used with a number of backgrounds. Both plots and maps can be produced with a white and a transparent background, and plots can also be produced using a particular shade of gray (`#EBEBEB`) that I use in the background of my slides.
+
+Finally, the package contains `cp_breaks()` for calculating breaks in mapping. It is a wrapper around the `classInt` package's `classIntervals` function along with `cut` for calculating factor variables containing breaks for mapping. The various approaches to calculating breaks are summarized in the [`classInt` documentation](https://cran.r-project.org/web/packages/classInt/classInt.pdf).
 
 ### Statistics
 `prener` includes a helper function for calculating p-values under the t-distribution:
@@ -44,4 +46,4 @@ The package also includes a theme specification for `ggplot2` that is designed t
 ```
 
 ## Contributor Code of Conduct
-Please note that this project is released with a [Contributor Code of Conduct](CODE_OFCONDUCT.md). By participating in this project you agree to abide by its terms.
+Please note that this project is released with a [Contributor Code of Conduct](CODE_OF_CONDUCT.md). By participating in this project you agree to abide by its terms.
